--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
             "navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
              style="background-color: #799EFF;">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Početna</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TR Vogošća</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,13 +25,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Početna</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Proizvodi" asp-action="Index">Proizvodi</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Proizvod" asp-action="Index">Proizvodi</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Aktivnost" asp-action="Index">Aktivnost</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Izvještaj" asp-action="Index">Izvjestaj</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Izvjestaj" asp-action="Index">Izvjestaj</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
