--- a/Views/Proizvod/Create.cshtml
+++ b/Views/Proizvod/Create.cshtml
@@ -1,4 +1,6 @@
 ﻿@model ProductViewer.Models.Proizvod
+@using ProductViewer.Models
+
 
 @{
     ViewData["Title"] = "Kreiraj proizvod";
@@ -39,9 +41,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Kategorija" class="control-label"></label>
-                <select asp-for="Kategorija" class="form-control"></select>
+                <select asp-for="Kategorija" class="form-control"
+                        asp-items="Html.GetEnumSelectList<Kategorija>()">
+                    <option value="">-- Odaberi kategoriju --</option>
+                </select>
                 <span asp-validation-for="Kategorija" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="SlikaUrl" class="control-label"></label>
                 <input asp-for="SlikaUrl" class="form-control" />
